# QuoteBench

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: comparison.py  graph.py  main.py  models.py  pricing.py  retrieval.py
data/: policies.md  policies.py  products.py
docs/: architecture.md
tests/: test_comparison.py  test_graph.py  test_main.py  test_pricing.py
