[project]
name = "quotebench"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.11",
    "pgvector>=0.2.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
